--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +24,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -39,4 +42,30 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  min-height: 30vh;
+}
+
+.container-button {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  margin: 3px;
+  background-color: #f9f9f9;
+  user-select: none;
+  cursor: pointer;
+  transition: transform 80ms ease;
+  transform: translateY(15px);
+}
+
+.container-button:hover {
+  background-color: #ceebe7aa;
 }
