--- a/client/src/styles/MapHolder.css
+++ b/client/src/styles/MapHolder.css
@@ -1,3 +1,10 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden; 
+}
+
 .map-container {
     display: flex;
     gap: 20px;
@@ -92,8 +99,8 @@
 }
 
 .map-holder-container {
-    width: min(80vw, 80vh * 10/8);
-    height: min(80vh, 80vw * 8/10);
+    width: min(60vw, 60vh * 10/8);   
+    height: min(60vh, 60vw * 8/10); 
     aspect-ratio: 1000 / 800;
     position: relative;
     box-sizing: border-box;
@@ -102,7 +109,9 @@
     background-position: center;
     background-repeat: no-repeat;
     background-color: #FFF;
+    margin: 0 auto; 
 }
+
 
 .map-view-wrapper {
     position: relative;
