--- a/client/src/styles/MapHolder.css
+++ b/client/src/styles/MapHolder.css
@@ -23,7 +23,18 @@ html, body {
     flex-shrink: 0;
 }
 
+@media (max-width: 1024px) {
+
+    html,body {
+        overflow:auto;
+    }
+}
+
 @media (max-width: 768px) {
+
+    html,body {
+        overflow:auto;
+    }
     .map-container {
         flex-direction: column;
         align-items: center;
